test/fail/stdop-t.rnp
'hello'.floor();
---
TypeError: floor expected number but got string
fail/stdop-t.rnp:1:1
> 1 | 'hello'.floor();
    | ^^^^^^^ floor expected number but got string
  2 | 
